force-app/main/default/objects/Account_Judgment__c/Account_Judgment__c.object-meta.xml
<CustomObject>
    <description>To maintain many to many relationship between Product and Judgment objects</description>
    <label>Account-Judgment</label>
    <nameField>
        <displayFormat>ACC-JD-{000000}</displayFormat>
        <label>Account-Judgment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Judgment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>