force-app/main/default/objects/Account_Judgment__c/fields/Account_Judgment_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Judgment_Number__c</fullName>
    <description>Account Judgment Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account Judgment Number</inlineHelpText>
    <label>Account Judgment Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>