force-app/main/default/objects/Account_Judgment__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>Created By</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Created By</inlineHelpText>
    <label>Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>