force-app/main/default/objects/Account_Judgment__c/fields/Debtor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_First_Name__c</fullName>
    <formula>Product__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debtor First Name</label>
    <type>Text</type>
</CustomField>