force-app/main/default/objects/Account_Judgment__c/fields/Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Name__c</fullName>
    <formula>Product__r.First_Name__c + &apos; &apos; + if(ISBLANK(Product__r.Middle_Name__c), &apos;&apos;, Product__r.Middle_Name__c ) +  Product__r.Last_Name__c</formula>
    <label>Debtor Name</label>
    <type>Text</type>
</CustomField>