force-app/main/default/objects/Account_Judgment__c/fields/Inbound_API_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Inbound_API_Request_Body__c</fullName>
    <description>Stores the portal request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores the portal request.</inlineHelpText>
    <label>Inbound API Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>