force-app/main/default/objects/Account_Judgment__c/fields/Inbound_API_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Inbound_API_Response_Body__c</fullName>
    <description>Store the response of salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Store the response of salesforce</inlineHelpText>
    <label>Inbound API Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>