force-app/main/default/objects/Account_Judgment__c/fields/Investment_Group__c.field-meta.xml
<CustomField>
    <fullName>Investment_Group__c</fullName>
    <formula>TEXT( Product__r.Investment_Group__c )</formula>
    <label>Investment Group</label>
    <type>Text</type>
</CustomField>