force-app/main/default/objects/Account_Judgment__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment ID</label>
    <referenceTo>Judgment__c</referenceTo>
    <relationshipLabel>Account-Judgment</relationshipLabel>
    <relationshipName>Account_Judgment</relationshipName>
    <type>Lookup</type>
</CustomField>