force-app/main/default/objects/Account_Judgment__c/fields/Judgment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Identifier__c</fullName>
    <description>Judgment Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Judgment Identifier</inlineHelpText>
    <label>Judgment Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>