force-app/main/default/objects/Account_Judgment__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <description>Last Modified By</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Modified By</inlineHelpText>
    <label>Last Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>