force-app/main/default/objects/Account_Judgment__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <formula>Product__r.Last_Payment_Date__c</formula>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>