force-app/main/default/objects/Account_Judgment__c/fields/Outbound_API_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Outbound_API_Response_Body__c</fullName>
    <description>Store the response of portal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Store the response of portal</inlineHelpText>
    <label>Outbound API Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>