force-app/main/default/objects/Account_Judgment__c/fields/Placement_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency__c</fullName>
    <formula>TEXT(Product__r.Collection_Agency__c)</formula>
    <label>Agency ID</label>
    <type>Text</type>
</CustomField>