force-app/main/default/objects/Account_Judgment__c/fields/Placement_Main_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Main_Status__c</fullName>
    <formula>TEXT(Product__r.Status__c) &amp;&quot; - &quot; &amp; TEXT(Product__r.Sub_Status__c)</formula>
    <label>Placement Main Status</label>
    <type>Text</type>
</CustomField>