force-app/main/default/objects/Account_Judgment__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <formula>Product__r.Placement_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Status</label>
    <type>Text</type>
</CustomField>