force-app/main/default/objects/Account_Judgment__c/fields/Portfolio_Group__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Group__c</fullName>
    <formula>Product__r.Portfolio_Group_Name_Formula__c</formula>
    <label>Portfolio Group</label>
    <type>Text</type>
</CustomField>