force-app/main/default/objects/Account_Judgment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Account-Judgment</relationshipLabel>
    <relationshipName>Account_Judgment</relationshipName>
    <type>Lookup</type>
</CustomField>