force-app/main/default/objects/Account_Judgment__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <description>Product Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Identifier</inlineHelpText>
    <label>Product Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>