force-app/main/default/objects/Account_Judgment__c/fields/Refer_to_Legal__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Legal__c</fullName>
    <formula>TEXT(Product__r.Refer_to_Legal__c)</formula>
    <label>Refer to Legal</label>
    <type>Text</type>
</CustomField>