force-app/main/default/objects/Account_Judgment__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <formula>Product__r.Originating_Creditor__c</formula>
    <label>Seller</label>
    <type>Text</type>
</CustomField>