force-app/main/default/objects/Account_Judgment__c/fields/Statute_Date__c.field-meta.xml
<CustomField>
    <fullName>Statute_Date__c</fullName>
    <formula>Product__r.Statute_Date__c</formula>
    <label>Statute Date</label>
    <type>Date</type>
</CustomField>