force-app/main/default/objects/Account_Judgment__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <formula>Product__r.Total_Payments__c</formula>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>