force-app/main/default/objects/Account_Judgment__c/validationRules/Status_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Cannot_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c), TEXT(PRIORVALUE(Status__c) ) =&apos;Inactive&apos;,
ISPICKVAL( Judgment__r.Legal_Sub_Status__c,&apos;Vacated&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed for Vacated judgments</errorMessage>
</ValidationRule>